  o Fix crash on 64-bit arch. with tempo & key effects.  (Sami Liedes)
  o `gain' alias for the vol effect.  (robs)

Other new features:

  o Now possible to control play-back resampling quality (and hence
    cpu-load) via the PLAY_RATE_ARG environment variable.  (robs)
  o Command line support for multiple file comments.  (robs)
  o New `soxi' utility to extract/display file header fields.  (robs)
  o Pkg-config support. (Pascal Giard)
  o Simple VU meter.  (robs)
  o Heuristic to detect when playing an album and set
    the default replay-gain mode to `album'.  (robs)
  o Better auto-choice of output file format parameters when
    type is different to that of input file.  (robs)
  o SoX now treats (and displays) encoding size & signal precision
    separately.  (robs)
  o Default audio devices (sox), and allow environment variables to
    be used to override the default audio device driver (rec/play)
    and default audio device (all).  (robs)
  o Simpler file info display for `play'.  (robs)
  o For some file-types, warn if file size seems too short.  (robs)
  o Added auto-detect for caf, sndr, txw & sf files.  (robs)
  o Added example0: simpler example of how to develop applications that
    use the libSoX effects chain.  (robs)
  o Added example2: simple example of how to develop applications that
    use libSoX to read an audio file.  (robs)

Other bug fixes:

  o Fix [1890983] rec shortcut should apply bit depth (8-bit,
    16-bit, etc.) to input handler.  (robs)
  o Fix ungraceful handling of out of disc space and other write
    errors (bug was introduced in 14.0.0).  (robs)
  o Fix endian selection (-B, -L, -x) in some circumstances.  (robs)
  o Fix auto-detect of hcom files.  (robs)

Internal improvements:

  o Use FORTIFY_SOURCE with gcc.  (robs)
  o Fixed all compiler warnings (AFAICT).  (robs)
  o Reimplement (separately) SoundTool & Sounder format handlers.  (robs)
  o Allow formats & effects to have any size of private data.  (robs)

