@@ -96,6 +96,8 @@ Other new features:
   o Now possible to control play-back resampling quality (and hence
     cpu-load) via the PLAY_RATE_ARG environment variable.  (robs)
   o Command line support for multiple file comments.  (robs)
+  o New --combine=mix-power option to mix combine using 1/sqrt(n) scaling
+    instead of 1/n [FR 2012856].  (robs)
   o New `soxi' utility to extract/display file header fields.  (robs)
   o Pkg-config support. (Pascal Giard)
   o Simple VU meter.  (robs)
